--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="row row-cols-1 row-cols-md-1 g-4 text-center">
                 <div class="col">
-                    <p><span id="result-found">no</span> result found</p>
+                    <p class="d-block"><span class="d-inline-block mt-4" id="result-found"></span> result found</p>
                 </div>
             </div>
         </section>
