--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid mb-3">
 
         <h1 class="text-center mt-4 text-info">Book Archive</h1>
 
