--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="show-search my-2">
           <div class="row row-cols-1 row-cols-md-1 g-4 text-center">
               <div class="col">
-                  <p class="d-block"><span class="d-inline-block mt-4" id="result-found"></span> result found</p>
+                  <p class="d-block"><span class="d-inline-block mt-4" id="result-found">No</span> result found</p>
               </div>
           </div>
 
