--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
 
+
+
   <body>
 
     <div class="container-fluid mb-3">
 
         <h1 class="text-center mt-4 text-info">Book Archive</h1>
+
 
         <!-- Book Search section -->
         <section class="search-area">
@@ -34,11 +37,11 @@
         </section>
 
 
-        <!-- Search Result showing -->
+        <!-- Search Result showing section -->
         <section class="show-search my-2">
           <div class="row row-cols-1 row-cols-md-1 g-4 text-center">
               <div class="col">
-                  <p class="d-block"><span class="d-inline-block mt-4" id="result-found">No</span> result found</p>
+                  <p id="result-count"><span class="d-inline-block mt-4" id="result-found">No</span> result found</p>
               </div>
           </div>
 
