--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
         <h1 class="text-center mt-4 text-info">Book Archive</h1>
 
-
         <!-- Book Search section -->
         <section class="search-area">
             <div class="input-group mb-3 w-75 mx-auto my-4">
@@ -41,7 +40,7 @@
         <section class="show-search my-2">
           <div class="row row-cols-1 row-cols-md-1 g-4 text-center">
               <div class="col">
-                  <p id="result-count"><span class="d-inline-block mt-4" id="result-found">No</span> result found</p>
+                  <p><span class="d-inline-block mt-4" id="result-found">No</span> result found</p>
               </div>
           </div>
 
